📃 Update About page

--- a/content/about.njk
+++ b/content/about.njk
@@ -11,7 +11,7 @@ eleventyNavigation:
 <section>
 	{{ macro.header(title + ' <span class="emoji" role="img" aria-label="Seedling">🌷</span>' ) }}
 
-	<p>👋 Hey! I'm a 30ish y/o frontend dev based in Wales, UK. My pronouns are she/her.</p>
+	<p><span class="emoji" role="img" aria-label="Wave">👋</span> Hey! I'm a 30ish y/o frontend dev based in Wales, UK. My pronouns are she/her.</p>
 
 	<h2>Some things about me</h2>
 	<ul>
@@ -26,8 +26,8 @@ eleventyNavigation:
 	<h2>Some places on the internet that I go</h2>
 	<ul>
 		<li><span class="emoji" role="img" aria-label="Bird">🐦</span> Twitter: <a href="https://twitter.com/fri11s">@fri11s@twitter.com</a></li>
-		<li><span class="emoji" role="img" aria-label="Cat">😺</span> Neocities profile: <a href="https://neocities.org/site/fri11s">@fri11s@neocities.com</a></li>
-		<li><span class="emoji" role="img" aria-label="Elephant">🐘</span> Fediverse: <a href="https://cutie.city/@frills">@frills@cutie.city</a> (Mastodon)</li>
+		<li><span class="emoji" role="img" aria-label="Cat">😺</span> Neocities: <a href="https://neocities.org/site/fri11s">@fri11s@neocities.org</a></li>
+		<li><span class="emoji" role="img" aria-label="Elephant">🐘</span> Fediverse: <a href="https://cutie.city/@frills">@frills@cutie.city</a></li>
 	</ul>
 
 
