--- a/content/blog.njk
+++ b/content/blog.njk
@@ -5,5 +5,5 @@ eleventyNavigation:
   key: Blog
   order: 3
 ---
-{% extends "postslist.njk" %}
+{% extends "bloglist.njk" %}
 {% set postslist = collections.posts %}
