--- a/content/buttonwall.njk
+++ b/content/buttonwall.njk
@@ -1,7 +1,10 @@
 ---
 title: Button wall
-emoji: ' <span class="emoji" role="img" aria-label="Seedling">🌱</span>'
+emoji: ' <span class="emoji" role="img" aria-label="Double hearts">💕</span>'
 description: My take on the classic 88x31 button wall. No images, just colourful little rectangles. I would like to open this up to people choosing and submitting their own colour combinations, but for now these are all selected and chosen by me. If you feature here and want to get your colours updated, <a href="/about/">message me</a> on any of my channels.
+eleventyNavigation:
+  key: Button wall (new!)
+  order: 4
 ---
 {% extends 'page.njk'%}
 
