🐛  Fix broken button

--- a/content/buttonwall.njk
+++ b/content/buttonwall.njk
@@ -97,7 +97,7 @@ eleventyNavigation:
 			<a target="_blank" href="https://justnik.me/" class="buttonwall__item" style="font-size: 12px; background-color: #2d3748; color: #fff;">justnik</a>
 		</li>
 		<li>
-			<a target="_blank" href="https://owain.codes/" class="buttonwall__item" style="font-size: 12px; background-color: #222831; color: #b6ff00;">owain.codes</a>
+			<a target="_blank" href="https://www.owain.codes/" class="buttonwall__item" style="font-size: 12px; background-color: #222831; color: #b6ff00;">owain.codes</a>
 		</li>
 	</ul>
 
