🎨 Update button wall

--- a/content/buttonwall.njk
+++ b/content/buttonwall.njk
@@ -18,7 +18,6 @@ eleventyNavigation:
 			padding: 0;
 			margin: 0 0 2rem 0;
 		}
-
 		.buttonwall.--highcontrast .buttonwall__item {
 			background: white!important;
 			color: #4d0024!important;
@@ -63,7 +62,6 @@ eleventyNavigation:
 
 	<button id="toggleHighContrast" class="button mb-1" aria-pressed="false">Enable high contrast</button>
 
-	<h2>Neocities</h2>
 	<ul class="buttonwall">
 		<li>
 			<a target="_blank" href="https://lostletters.neocities.org/" class="buttonwall__item" style="font-size: 12px; background-color: #34072d; color: #ffc6ec;">lostletters</a>
@@ -83,10 +81,7 @@ eleventyNavigation:
 		<li>
 			<a target="_blank" href="https://daintye.co/" class="buttonwall__item --spots" style="font-size: 13px; background-color: white; color: #ff9dc9;">daintyeco</a>
 		</li>
-	</ul>
-
-	<h2>Friends</h2>
-	<ul class="buttonwall">
+		{# Friends #}
 		<li>
 			<a target="_blank" href="https://gothhoblin.me/" class="buttonwall__item" style="font-size: 12px; background-color: #083820; color: #fff;">goth hoblin</a>
 		</li>
@@ -99,11 +94,7 @@ eleventyNavigation:
 		<li>
 			<a target="_blank" href="https://www.owain.codes/" class="buttonwall__item" style="font-size: 12px; background-color: #222831; color: #b6ff00;">owain.codes</a>
 		</li>
-	</ul>
-
-	<h2>Artists</h2>
-
-	<ul class="buttonwall">
+		{# Artists #}
 		<li>
 			<a target="_blank" href="https://www.furrylittlepeach.com/" class="buttonwall__item" style="font-size: 12px; background-color: #f0490a; color: #fff;">furry little peach </a>
 		</li>
