--- a/content/buttonwall.njk
+++ b/content/buttonwall.njk
@@ -53,7 +53,7 @@ eleventyNavigation:
 			<a target="_blank" href="https://hillhouse.neocities.org" class="buttonwall__item" style="font-size: 13px; background-color: #ffccdd; color: #ab6c84;">hillhouse</a>
 		</li>
 		<li>
-			<a target="_blank" href="https://hillhouse.neocities.org" class="buttonwall__item" style="font-size: 12px; background-color: #E6E6FA; color: #9370DB;">jasmine's journals</a>
+			<a target="_blank" href="https://jasm1nii.neocities.org" class="buttonwall__item" style="font-size: 12px; background-color: #E6E6FA; color: #9370DB;">jasmine's journals</a>
 		</li>
 		{# Artists #}
 		<li>
