--- a/public/css/main.css
+++ b/public/css/main.css
@@ -33,6 +33,10 @@
   gap: 15px;
 }
 
+form {width: 100%}
+label, input, textarea {display: block}
+label{font-weight: 700}
+
 .callout {
   background-color: var(--callout);
   padding: 0.5rem 1rem;
@@ -45,7 +49,6 @@
 }
 
 /* Helpers */
-
 h1.inline,
 h2.inline,
 h3.inline,
