📃 Update About page

--- a/content/about.njk
+++ b/content/about.njk
@@ -85,9 +85,17 @@ eleventyNavigation:
 	<h2>To do on this website</h2>
 	<ol>
 		<li>Credits page</li>
-		<li>Ethos page</li>
-		<li>88x31 button wall (how does this interact with Ethos?)</li>
+		<li>Manifesto page</li>
+		<li><span class="emoji" role="img" aria-label="Check mark">✅</span> 88x31 <a href="/buttonwall/">button wall</a> (how does this interact with manifesto?)</li>
 		<li>Site map (that I nuked because I thought it was killing the pipeline)</li>
+		<li>Orla shrine</li>
+		<li>Cool things I've done page
+			<ul>
+				<li>Scribble Light on Subtle Patterns</li>
+				<li>CSS Tarot card (3 of swords)</li>
+				<li>Clients I have developed for. not that this is a work site. just somewhere to rememeber them all</li>
+			</ul>
+		</li>
 	</ol>
 </section>
 
