--- a/content/buttonwall.njk
+++ b/content/buttonwall.njk
@@ -14,6 +14,8 @@ eleventyNavigation:
 <section>
 	{{ macro.header(title + emoji, description ) }}
 
+	<p>If your site is on neocities, you can request to be added by commenting on my <a href="https://neocities.org/site/fri11s?event_id=2888619">neocities profile</a> with your site name, background colour choice and text colour choice.</p>
+
 	<div class="mb-1">
 		<p>If you would like to add my button to your wall, copy + paste the code below. I am using an SVG so it doesn't need to be hosted or uploaded anywhere to work:</p>
 		<div>
@@ -72,6 +74,9 @@ eleventyNavigation:
 		</li>
 		<li>
 			<a target="_blank" href="https://jasm1nii.neocities.org" class="buttonwall__item" style="font-size: 12px; background-color: #E6E6FA; color: #9370DB;">jasmine's journal</a>
+		</li>
+		<li>
+			<a target="_blank" href="https://pinkvampyr.neocities.org" class="buttonwall__item" style="font-size: 12px; background-color: #1C1C1C; color: #FF8FCB;">pinkvampyr</a>
 		</li>
 		{# Artists #}
 		<li>
