--- a/content/buttonwall.njk
+++ b/content/buttonwall.njk
@@ -78,6 +78,9 @@ eleventyNavigation:
 		<li>
 			<a target="_blank" href="https://pinkvampyr.neocities.org" class="buttonwall__item" style="font-size: 12px; background-color: #1C1C1C; color: #FF8FCB;">pinkvampyr</a>
 		</li>
+		<li>
+			<a target="_blank" href="https://pinkvampyr.neocities.org" class="buttonwall__item" style="font-size: 12px; background-color: #ffd6d6; color: #188bc4;">lipu pi jan sunosin</a>
+		</li>
 		{# Artists #}
 		<li>
 			<a target="_blank" href="https://www.furrylittlepeach.com/" class="buttonwall__item" style="font-size: 12px; background-color: #f0490a; color: #fff;">furry little peach </a>
