--- a/content/buttonwall.njk
+++ b/content/buttonwall.njk
@@ -79,7 +79,7 @@ eleventyNavigation:
 			<a target="_blank" href="https://pinkvampyr.neocities.org" class="buttonwall__item" style="font-size: 12px; background-color: #1C1C1C; color: #FF8FCB;">pinkvampyr</a>
 		</li>
 		<li>
-			<a target="_blank" href="https://pinkvampyr.neocities.org" class="buttonwall__item" style="font-size: 12px; background-color: #ffd6d6; color: #188bc4;">lipu pi jan sunosin</a>
+			<a target="_blank" href="https://sunosin.neocities.org" class="buttonwall__item" style="font-size: 12px; background-color: #ffd6d6; color: #188bc4;">lipu pi jan sunosin</a>
 		</li>
 		{# Artists #}
 		<li>
