--- a/content/buttonwall.njk
+++ b/content/buttonwall.njk
@@ -52,22 +52,22 @@ eleventyNavigation:
 		</li>
 		{# Others (mostly neocities and mastodon) #}
 		<li>
-			<a target="_blank" href="https://lostletters.neocities.org/" class="buttonwall__item" style="font-size: 12px; background-color: #34072d; color: #ffc6ec;">lostletters</a>
+			<a target="_blank" href="https://lostletters.neocities.org" class="buttonwall__item" style="font-size: 12px; background-color: #34072d; color: #ffc6ec;">lostletters</a>
 		</li>
 		<li>
-			<a target="_blank" href="https://thogreer.neocities.org/" class="buttonwall__item" style="font-size: 14px; background-color: #0334a7; color: #fff;">thogreer</a>
+			<a target="_blank" href="https://thogreer.neocities.org" class="buttonwall__item" style="font-size: 14px; background-color: #0334a7; color: #fff;">thogreer</a>
 		</li>
 		<li>
-			<a target="_blank" href="https://jessicajournals.com/" class="buttonwall__item" style="font-size: 10px; background-color: #1e1e2e; color: #A5E3A1; background-image: linear-gradient(to left, #181825, #1e1e2e)">jessica journals</a>
+			<a target="_blank" href="https://jessicajournals.com" class="buttonwall__item" style="font-size: 10px; background-color: #1e1e2e; color: #A5E3A1; background-image: linear-gradient(to left, #181825, #1e1e2e)">jessica journals</a>
 		</li>
 		<li>
-			<a target="_blank" href="https://10kph.neocities.org/" class="buttonwall__item" style="font-size: 14px; background-color: #1c1e26; color: #e95678;">10kph</a>
+			<a target="_blank" href="https://10kph.neocities.org" class="buttonwall__item" style="font-size: 14px; background-color: #1c1e26; color: #e95678;">10kph</a>
 		</li>
 		<li>
-			<a target="_blank" href="https://maria.town/" class="buttonwall__item" style="font-size: 13px; background-color: #1f2d39; color: #96d1a0;">maria</a>
+			<a target="_blank" href="https://maria.town" class="buttonwall__item" style="font-size: 13px; background-color: #1f2d39; color: #96d1a0;">maria</a>
 		</li>
 		<li>
-			<a target="_blank" href="https://daintye.co/" class="buttonwall__item" style="font-size: 13px; background-color: white; color: #ff9dc9;">daintyeco</a>
+			<a target="_blank" href="https://daintye.co" class="buttonwall__item" style="font-size: 13px; background-color: white; color: #ff9dc9;">daintyeco</a>
 		</li>
 		<li>
 			<a target="_blank" href="https://hillhouse.neocities.org" class="buttonwall__item" style="font-size: 13px; background-color: #ffccdd; color: #ab6c84;">hillhouse</a>
@@ -83,19 +83,22 @@ eleventyNavigation:
 		</li>
 		{# Artists #}
 		<li>
-			<a target="_blank" href="https://www.furrylittlepeach.com/" class="buttonwall__item" style="font-size: 12px; background-color: #f0490a; color: #fff;">furry little peach </a>
+			<a target="_blank" href="https://www.furrylittlepeach.com" class="buttonwall__item" style="font-size: 12px; background-color: #f0490a; color: #fff;">furry little peach </a>
 		</li>
 		<li>
-			<a target="_blank" href="https://cheyennebarton.com/" class="buttonwall__item" style="font-size: 14px; background-color: #ffc929; color: #fa4723;">cheyenne barton</a>
+			<a target="_blank" href="https://cheyennebarton.com" class="buttonwall__item" style="font-size: 14px; background-color: #ffc929; color: #fa4723;">cheyenne barton</a>
 		</li>
 		<li>
-			<a target="_blank" href="https://girlscape.co.uk/" class="buttonwall__item" style="font-size: 13px; background-color: #ff91bb; color: #fff;">girlscape</a>
+			<a target="_blank" href="https://girlscape.co.uk" class="buttonwall__item" style="font-size: 13px; background-color: #ff91bb; color: #fff;">girlscape</a>
 		</li>
 		<li>
-			<a target="_blank" href="https://leighellexson.com/" class="buttonwall__item" style="font-size: 12px; background-color: #9bc18a; color: #fdfbf7;">Leigh Ellexson</a>
+			<a target="_blank" href="https://leighellexson.com" class="buttonwall__item" style="font-size: 12px; background-color: #9bc18a; color: #fdfbf7;">Leigh Ellexson</a>
 		</li>
 		<li>
-			<a target="_blank" href="https://uncomfyco.com/" class="buttonwall__item" style="font-size: 13px; background-color: #603814; color: #fff;">uncomfyco</a>
+			<a target="_blank" href="https://uncomfyco.com" class="buttonwall__item" style="font-size: 13px; background-color: #603814; color: #fff;">uncomfyco</a>
+		</li>
+		<li>
+			<a target="_blank" href="https://www.pansy-shop.com" class="buttonwall__item" style="font-size: 13px; background-color: #ffe3e2; color: #220967;">pansy</a>
 		</li>
 	</ul>
 
