--- a/content/buttonwall.njk
+++ b/content/buttonwall.njk
@@ -39,10 +39,13 @@ eleventyNavigation:
 	<ul class="buttonwall">
 		{# Friends #}
 		<li>
-			<a target="_blank" href="https://gothhoblin.me/" class="buttonwall__item" style="font-size: 12px; background-color: #083820; color: #fff;">goth hoblin</a>
+			<a target="_blank" href="https://gothhoblin.me" class="buttonwall__item" style="font-size: 12px; background-color: #083820; color: #fff;">goth hoblin</a>
 		</li>
 		<li>
-			<a target="_blank" href="https://teafuellednonsense.wordpress.com/" class="buttonwall__item" style="font-size: 12px; background-color: #fff; color: #00aadc;">Justin Blogs Again!</a>
+			<a target="_blank" href="https://www.thenotsomiserable.co.uk" class="buttonwall__item" style="font-size: 12px; background-color: #5f0979; color: #fff;">the not so miserable</a>
+		</li>
+		<li>
+			<a target="_blank" href="https://teafuellednonsense.wordpress.com" class="buttonwall__item" style="font-size: 12px; background-color: #fff; color: #00aadc;">Justin Blogs Again!</a>
 		</li>
 		<li>
 			<a target="_blank" href="https://justnik.me/" class="buttonwall__item" style="font-size: 12px; background-color: #2d3748; color: #fff;">justnik</a>
@@ -98,7 +101,7 @@ eleventyNavigation:
 			<a target="_blank" href="https://uncomfyco.com" class="buttonwall__item" style="font-size: 13px; background-color: #603814; color: #fff;">uncomfyco</a>
 		</li>
 		<li>
-			<a target="_blank" href="https://www.pansy-shop.com" class="buttonwall__item" style="font-size: 13px; background-color: #ffe3e2; color: #220967;">pansy</a>
+			<a target="_blank" href="https://www.pansy-shop.com" class="buttonwall__item" style="font-size: 16px; background-color: #ffe3e2; color: #220967;">pansy</a>
 		</li>
 	</ul>
 
