--- a/content/buttonwall.njk
+++ b/content/buttonwall.njk
@@ -84,6 +84,9 @@ eleventyNavigation:
 		<li>
 			<a target="_blank" href="https://sunosin.neocities.org" class="buttonwall__item" style="font-size: 12px; background-color: #ffd6d6; color: #188bc4;">lipu pi jan sunosin</a>
 		</li>
+		<li>
+			<a target="_blank" href="https://punkwasp.neocities.org" class="buttonwall__item" style="font-size: 13px; background-color: #454315; color: #ffd700;">punkwasp</a>
+		</li>
 		{# Artists #}
 		<li>
 			<a target="_blank" href="https://www.furrylittlepeach.com" class="buttonwall__item" style="font-size: 12px; background-color: #f0490a; color: #fff;">furry little peach </a>
