--- a/content/buttonwall.njk
+++ b/content/buttonwall.njk
@@ -64,6 +64,9 @@ eleventyNavigation:
 			<a target="_blank" href="https://jessicajournals.com" class="buttonwall__item" style="font-size: 10px; background-color: #1e1e2e; color: #A5E3A1; background-image: linear-gradient(to left, #181825, #1e1e2e)">jessica journals</a>
 		</li>
 		<li>
+			<a target="_blank" href="https://sleepydev.neocities.org" class="buttonwall__item" style="font-size: 13px; background-color: #f9f9f9; color: blueviolet;">sleepdev</a>
+		</li>
+		<li>
 			<a target="_blank" href="https://10kph.neocities.org" class="buttonwall__item" style="font-size: 14px; background-color: #1c1e26; color: #e95678;">10kph</a>
 		</li>
 		<li>
