--- a/public/css/main.css
+++ b/public/css/main.css
@@ -33,9 +33,19 @@
   row-gap: 15px;
 }
 
-form {width: 100%}
-label, input, textarea {display: block}
-label{font-weight: 700}
+form {
+  width: 100%
+}
+
+label,
+input,
+textarea {
+  display: block
+}
+
+label {
+  font-weight: 700
+}
 
 .callout {
   background-color: var(--callout);
@@ -46,6 +56,11 @@ label{font-weight: 700}
 
 .twocol {
   column-count: 2;
+}
+
+.grid-threecol {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 /* Helpers */
@@ -232,4 +247,73 @@ ol.unstyled {
 
 #neossg table {
   border-collapse: collapse;
+}
+
+.bloglist-item.draft {
+  opacity: 0.5;
+}
+
+.post-tag {
+  background-color: var(--link);
+  color: var(--bg);
+  padding: 2px 8px;
+  border-radius: 4px;
+  font-size: 90%;
+}
+.buttonwall {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 1px;
+  list-style-type: none;
+  padding: 0;
+  margin: 0 0 2rem
+}
+
+.buttonwall.--highcontrast .buttonwall__item {
+  background: #fff !important;
+  color: #4d0024 !important;
+  box-shadow: inset 0 0 0 1px #4d0024 !important;
+  text-decoration: underline !important
+}
+
+@media (prefers-color-scheme:dark) {
+  .buttonwall.--highcontrast .buttonwall__item {
+    background: #4d0024 !important;
+    color: #fff !important;
+    box-shadow: inset 0 0 0 1px #fff !important
+  }
+}
+
+.buttonwall__item {
+  width: 80px;
+  height: 31px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  transition: transform .4s;
+  overflow: hidden;
+  word-break: break-word;
+  padding: 0 4px;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1.1
+}
+
+.buttonwall__item:active,
+.buttonwall__item:focus,
+.buttonwall__item:hover {
+  transform: scale(1.1)
+}
+
+@media (min-width:767px) {
+
+  .buttonwall__item:active,
+  .buttonwall__item:focus,
+  .buttonwall__item:hover {
+    transform: scale(2)
+  }
 }
