--- a/content/credits.njk
+++ b/content/credits.njk
@@ -12,7 +12,7 @@ description: Sources and inpirations for assets and tools used on this site.
 	<ul>
 		<li>Latest status is powered by <a href="https://status.cafe" target="_blank">status.cafe</a></li>
 		<li><a href="https://github.com/biancarosa/lastfm-last-played" target="_blank">Last.fm last played script</a> by <a href="https://biancarosa.com.br/" target="_blank">Bianca Rosa</a></li>
-		<li>Site heading font is <a href="https://fonts.google.com/specimen/Cherry+Bomb+One" target="_blank">Cherry Bomb One</a></li>
+		<li>Site heading font is <a href="https://github.com/satsuyako/CherryBomb" target="_blank">Cherry Bomb</a></li>
 		<li>Built using <a href="https://www.11ty.dev/" target="_blank">eleventy</a> static site generator</li>
 		<li>Source code is on <a href="https://neocities.org" target="_blank">Github</a></li>
 		<li>Hosted on <a href="https://github.com/CupOfTegan/frills-neocities" target="_blank">Neocities</a></li>
