--- a/content/new.njk
+++ b/content/new.njk
@@ -16,9 +16,11 @@
                 <span class="visually-hidden">Frills</span>
                 <svg class="frills" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 76 25" width="200" height="66" aria-hidden="true" preserveAspectRatio="xMinYMin">
                     <path class="frills-tx" d="M15.8 15c.5.3.7.8.7 1.6 0 1-.4 1.7-1.2 2-1 .4-2.2.5-3.4.5H7.7v1.8c0 2.1-.8 3.2-2.5 3.2-1.4 0-2.5-.8-3.3-2.4-.8-1.5-1.2-4-1.2-7.4a10 10 0 0 1 9.7-10.6c2.8-.2 6.8 1 6.8 4.3s-3.2 3.4-5.7 3.4c-1.7 0-4.1.7-4.1 2.7h3.7c1.5 0 3.4 0 4.7.9Zm6 9.1c-1.2 0-2-.7-2.5-2.2a21 21 0 0 1-.4-9c.3-1.6 1.1-2.8 2.7-2.8 1 0 2 .4 2.2 1.4a4 4 0 0 1 1.7-.8c1.4-.4 2.8-.4 4.1.2 1.4.6 2.8 2.3 2.1 3.9-.4.9-1.2 1.4-2.2 1.4-1.7 0-2.8-1-4.2.5-1.2 1.2-.8 3.3-.9 4.8 0 1.5-1 2.6-2.6 2.6Zm14-14.1c-2 0-3.3-1.8-3.3-3.6a3.4 3.4 0 1 1 6.8 0c0 1.9-1.6 3.6-3.5 3.6Zm0 14.1c-1.6 0-2.3-1.2-2.4-2.7-.3-2.5-.3-5 0-7.4.2-1.4 1-2.5 2.5-2.5s2.3 1.3 2.5 2.7c.3 2.5.3 5 0 7.4-.3 1.5-.9 2.5-2.6 2.5Zm8.4 0c-2.3 0-3-2.4-3.2-4.3a58 58 0 0 1 0-11.6c.2-2 .8-4.5 3.2-4.5 2.4 0 3.2 3.8 3.3 4.5.3 3.8.2 7.7-.2 11.5-.1 1.8-.9 4.4-3.1 4.4Zm8.3 0c-2.3 0-3-2.4-3.2-4.3a58 58 0 0 1 0-11.6c.2-2 1-4.5 3.3-4.5 2.4 0 3 2.5 3.2 4.5.3 3.8.3 7.7-.1 11.5-.1 1.9-1 4.4-3.2 4.4Zm10 0c-1.8 0-5.6-.5-5.6-3 0-.6.2-1 .6-1.4.4-.3 1-.5 1.5-.5 1 0 1.5.8 2.3.9.6 0 .9-.7.3-1l-2.1-.9c-1.4-.8-2.7-1.8-2.6-3.5 0-1.7 1.6-3 3.1-3.7 2-.8 4.3-.7 6.4-.1 1.3.4 2.9 1.5 2.9 3 0 1.6-1.9 2.3-3.2 1.5-.4-.2-1.3-.5-1.5 0-.1.5.2.8.6.9 1.1.4 2 .9 2.7 1.4a3 3 0 0 1 1 2.4c0 1.2-.5 2.2-1.7 3-1.2.7-2.7 1-4.7 1Z" />
-                    <path fill="hsl(51, 100%, 70%)" d="M68.2 2.2a2 2 0 0 1 1.5 1.5 2 2 0 0 1 1.6-1.5V2A2 2 0 0 1 69.8.5h-.1A2 2 0 0 1 68.2 2c-.1 0-.1.1 0 .2Z" />
-                    <path fill="hsl(51, 100%, 60%)" d="M63 5.3a3.7 3.7 0 0 1 2.6 2.6h.3a3.7 3.7 0 0 1 2.6-2.6c.1 0 .1-.2 0-.2a3.6 3.6 0 0 1-2.6-2.7h-.3A3.7 3.7 0 0 1 63 5.1c-.1 0-.1.1 0 .2Z" />
-                    <path fill="hsl(51, 100%, 50%)" d="M67.4 9.4a5.5 5.5 0 0 1 4 4h.3a5.5 5.5 0 0 1 4-4v-.3a5.5 5.5 0 0 1-4-4c0-.1-.3-.1-.4 0a5.5 5.5 0 0 1-3.9 4c-.2 0-.2.3 0 .3Z" />
+                    <g>
+                        <path class="frills-x" fill="hsl(51, 100%, 70%)" d="M68.2 2.2a2 2 0 0 1 1.5 1.5 2 2 0 0 1 1.6-1.5V2A2 2 0 0 1 69.8.5h-.1A2 2 0 0 1 68.2 2c-.1 0-.1.1 0 .2Z" />
+                        <path class="frills-x" fill="hsl(51, 100%, 60%)" d="M63 5.3a3.7 3.7 0 0 1 2.6 2.6h.3a3.7 3.7 0 0 1 2.6-2.6c.1 0 .1-.2 0-.2a3.6 3.6 0 0 1-2.6-2.7h-.3A3.7 3.7 0 0 1 63 5.1c-.1 0-.1.1 0 .2Z" />
+                        <path class="frills-x" fill="hsl(51, 100%, 50%)" d="M67.4 9.4a5.5 5.5 0 0 1 4 4h.3a5.5 5.5 0 0 1 4-4v-.3a5.5 5.5 0 0 1-4-4c0-.1-.3-.1-.4 0a5.5 5.5 0 0 1-3.9 4c-.2 0-.2.3 0 .3Z" />
+                    </g>
                 </svg>
             </a>
             <nav aria-label="Top level" class="page-nav">
@@ -45,7 +47,7 @@
         </header>
         <main class="page-main">
             <div class="section-side">
-                <img class="bio-pic" src="/images/pic.png">
+                <img class="bio-pic" src="/images/pic.png" alt="Black and white avatar illustration: a smiling woman with shoulder length dark hair, large eyes and sparkles surrounding her">
                 <ul class="unstyled">
                     <li>🌞 Gemini</li>
                     <li>🌚 Scorpio</li>
@@ -56,8 +58,10 @@
             </div>
             <section class="section">
                 <h1>Example of a page title</h1>
+                <p>Welcome to my internet realm, here you will find Lorem ipsum dolor sit amet consectetur adipisicing elit  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc congue posuere ex, sit amet fermentum enim fringilla et. Phasellus sollicitudin sem mi, eu fermentum odio vestibulum in. Maecenas rhoncus bibendum tellus id aliquam. Aliquam eget lorem ac arcu ullamcorper tempor in vel tortor. Pellentesque tempor arcu eget nulla mattis, vitae vehicula velit rhoncus. In eget ipsum mi. Nunc quis neque lectus. Pellentesque rhoncus, arcu non tempor semper, massa urna ultrices justo, sed vulputate nisi ex sed augue. Integer ac purus consectetur, porttitor nibh vel, venenatis felis. Praesent in lacinia est. Donec molestie tincidunt mattis. Vivamus non aliquam justo. Donec et magna pretium, condimentum nisi vel, commodo eros. Curabitur lectus lectus, scelerisque ut lacus quis, dictum luctus nisl. Quisque lacinia aliquam mauris, quis accumsan quam pulvinar vel. 
+                </p>
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc congue posuere ex, sit amet fermentum enim fringilla et. Phasellus sollicitudin sem mi, eu fermentum odio vestibulum in. Maecenas rhoncus bibendum tellus id aliquam. Aliquam eget lorem ac arcu ullamcorper tempor in vel tortor. Pellentesque tempor arcu eget nulla mattis, vitae vehicula velit rhoncus. In eget ipsum mi. Nunc quis neque lectus. Pellentesque rhoncus, arcu non tempor semper, massa urna ultrices justo, sed vulputate nisi ex sed augue. Integer ac purus consectetur, porttitor nibh vel, venenatis felis. Praesent in lacinia est. Donec molestie tincidunt mattis. Vivamus non aliquam justo. Donec et magna pretium, condimentum nisi vel, commodo eros. Curabitur lectus lectus, scelerisque ut lacus quis, dictum luctus nisl. Quisque lacinia aliquam mauris, quis accumsan quam pulvinar vel. </p>
             </section>
-            <div class=""></div>
         </main>
     </div>
 </body>
