--- a/public/css/new.css
+++ b/public/css/new.css
@@ -199,6 +199,14 @@ p {
     fill: hsl(255, 70%, 70%)
   }
 }
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 
 .frills {
   max-height: 60px;
@@ -218,6 +226,31 @@ p {
 @media (prefers-reduced-motion: no-preference) {
   .frills-tx {
     animation: cl 10s 0s infinite forwards alternate
+  }
+
+  .frills:hover .frills-x,
+  .frills:focus .frills-x,
+  .frills:active .frills-x {
+    animation-name: blink;
+    animation-fill-mode: normal;
+    animation-iteration-count: infinite;
+    animation-direction: backwards;
+  }
+
+  .frills-x {
+    opacity: 0;
+  }
+  .frills-x:nth-child(3) {
+    animation-delay: 0s;
+    animation-duration: 2.3666666s;
+  }
+  .frills-x:nth-child(2) {
+    animation-delay: 0.3s;
+    animation-duration: 2.71111s;
+  }
+  .frills-x:nth-child(1) {
+    animation-delay: 0.1s;
+    animation-duration: 1.866666s;
   }
 }
 
@@ -258,16 +291,18 @@ p {
 .page-main {
   padding: 60px 0 0 0;
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: 1fr 3fr;
+  gap: 26px;
 }
 
 .section {
-  border-radius: 1rem;
+  /* border-radius: 1rem;
   border: 1px solid var(--border);
-  padding: 1rem;
+  padding: 1rem; */
 }
 
 .bio-pic {
   border-bottom: 5px solid var(--border);
   max-width: 200px;
+  margin-bottom: 1rem;
 }
