--- a/content/credits.njk
+++ b/content/credits.njk
@@ -13,6 +13,8 @@ description: Sources and inpirations for assets and tools used on this site.
 		<li>Latest status is powered by <a href="https://status.cafe" target="_blank">status.cafe</a></li>
 		<li><a href="https://github.com/biancarosa/lastfm-last-played" target="_blank">Last.fm last played script</a> by <a href="https://biancarosa.com.br/" target="_blank">Bianca Rosa</a></li>
 		<li><a href="https://projects.verou.me/css3patterns/" target="_blank">Squiggly background gradient</a> by Lea Verou</li>
+		<li>Avatar by <a href="https://alexboucher.carbonmade.com/">flowerveil</a>, commisioned many moons ago</li>
+		<li><a href="https://doodad.dev/dither-me-this/" target="_blank">Image dithering tool</a> by doodad</li>
 		<li>Site heading font is <a href="https://github.com/satsuyako/CherryBomb" target="_blank">Cherry Bomb</a></li>
 		<li>Built using <a href="https://www.11ty.dev/" target="_blank">eleventy</a> static site generator</li>
 		<li>Source code is on <a href="https://neocities.org" target="_blank">Github</a></li>
