--- a/content/new.njk
+++ b/content/new.njk
@@ -34,15 +34,15 @@
                     <li>🦄 <a href="#">Other</a>
                 </ul>
             </nav>
-            <div>
-                {# <label>
+            <div class="settings">
+                <label>
                     Light mode
                     <input type="checkbox">
                 </label>
                 <label>
                     Reduce animation
                     <input type="checkbox">
-                </label> #}
+                </label>
             </div>
         </header>
         <main class="page-main">
