--- a/content/new.njk
+++ b/content/new.njk
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div class="page">
-        <header class="page-header">
+        <header class="page-header grid">
             <a href="/" class="page-title">
                 <span class="visually-hidden">Frills</span>
                 <svg class="frills" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 76 25" width="200" height="66" aria-hidden="true" preserveAspectRatio="xMinYMin">
@@ -35,25 +35,25 @@
                 </ul>
             </nav>
             <div class="settings">
-                <label>
+                {# <label>
                     Light mode
                     <input type="checkbox">
                 </label>
                 <label>
                     Reduce animation
                     <input type="checkbox">
-                </label>
+                </label> #}
             </div>
         </header>
-        <main class="page-main">
+        <main class="page-main grid">
             <div class="section-side">
                 <img class="bio-pic" src="/images/pic.png" alt="Black and white avatar illustration: a smiling woman with shoulder length dark hair, large eyes and sparkles surrounding her">
                 <ul class="unstyled">
+                    <li>🌷 she/her</li>
+                    <li>📍 Wales, UK</li>
+                    <li>⏰ 06:00pm (utc+1)</li>
                     <li>🌞 Gemini</li>
                     <li>🌚 Scorpio</li>
-                    <li>📍 Wales, UK</li>
-                    <li>🌷 she/her</li>
-                    <li>⏰ 06:00pm</li>
                 </ul>
             </div>
             <section class="section">
@@ -63,5 +63,28 @@
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc congue posuere ex, sit amet fermentum enim fringilla et. Phasellus sollicitudin sem mi, eu fermentum odio vestibulum in. Maecenas rhoncus bibendum tellus id aliquam. Aliquam eget lorem ac arcu ullamcorper tempor in vel tortor. Pellentesque tempor arcu eget nulla mattis, vitae vehicula velit rhoncus. In eget ipsum mi. Nunc quis neque lectus. Pellentesque rhoncus, arcu non tempor semper, massa urna ultrices justo, sed vulputate nisi ex sed augue. Integer ac purus consectetur, porttitor nibh vel, venenatis felis. Praesent in lacinia est. Donec molestie tincidunt mattis. Vivamus non aliquam justo. Donec et magna pretium, condimentum nisi vel, commodo eros. Curabitur lectus lectus, scelerisque ut lacus quis, dictum luctus nisl. Quisque lacinia aliquam mauris, quis accumsan quam pulvinar vel. </p>
             </section>
         </main>
+        <footer class="page-footer grid">
+            <div class=""></div>
+            <div class="webrings">
+                <div class="webring--retronaut">
+                    <a href="https://webring.dinhe.net/prev/https://fri11s.neocities.org/" class="webring__prev">Previous site</a>
+                    <a href="https://webring.dinhe.net/" target="_blank">retronaut</a>
+                    <a href="https://webring.dinhe.net/next/https://fri11s.neocities.org/" class="webring__next">Next site</a>
+                </div>
+                <div class="webring--hotline">
+                    <a href="https://hotlinewebring.club/fri11s/next" class="webring__prev">Previous site</a>
+                    <a href="https://hotlinewebring.club/" target="_blank">hotline</a>
+                    <a href="https://hotlinewebring.club/fri11s/previous" class="webring__next">Next site</a>
+                </div>
+                <div class="webring--neossg">
+                    <div id="neossg">
+                        <script type="text/javascript" src="https://neossg.neocities.org/onionring-variables.js"></script>
+                        <script type="text/javascript" src="https://neossg.neocities.org/onionring-widget.js"></script>
+                    </div>
+                </div>
+            </div>
+            <div class=""></div>
+            {{env}}
+        </footer>
     </div>
 </body>
