--- a/content/new.njk
+++ b/content/new.njk
@@ -49,18 +49,16 @@
             <div class="section-side">
                 <img class="bio-pic" src="/images/pic.png" alt="Black and white avatar illustration: a smiling woman with shoulder length dark hair, large eyes and sparkles surrounding her">
                 <ul class="unstyled">
-                    <li>🌷 she/her</li>
-                    <li>📍 Wales, UK</li>
-                    <li>⏰ 06:00pm (utc+1)</li>
-                    <li>🌞 Gemini</li>
-                    <li>🌚 Scorpio</li>
+                    <li><span class="emoji" aria-hidden="true">🌷</span> she/her</li>
+                    <li> <span class="emoji" role="img" aria-label="Location">📍</span> Wales, UK</li>
+                    <li><span class="emoji" role="img" aria-label="Clock">⏰</span> <span id="localTime" class="lowercase" title="British Summer Time">12:00pm</span> (utc+1)</li>
+                    <li><span class="emoji" role="img" aria-label="Sun sign">🌞</span> Gemini</li>
+                    <li><span role="img" class="emoji" aria-label="Moon sign">🌚</span> Scorpio</li>
                 </ul>
             </div>
             <section class="section">
                 <h1>Example of a page title</h1>
-                <p>Welcome to my internet realm, here you will find Lorem ipsum dolor sit amet consectetur adipisicing elit  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc congue posuere ex, sit amet fermentum enim fringilla et. Phasellus sollicitudin sem mi, eu fermentum odio vestibulum in. Maecenas rhoncus bibendum tellus id aliquam. Aliquam eget lorem ac arcu ullamcorper tempor in vel tortor. Pellentesque tempor arcu eget nulla mattis, vitae vehicula velit rhoncus. In eget ipsum mi. Nunc quis neque lectus. Pellentesque rhoncus, arcu non tempor semper, massa urna ultrices justo, sed vulputate nisi ex sed augue. Integer ac purus consectetur, porttitor nibh vel, venenatis felis. Praesent in lacinia est. Donec molestie tincidunt mattis. Vivamus non aliquam justo. Donec et magna pretium, condimentum nisi vel, commodo eros. Curabitur lectus lectus, scelerisque ut lacus quis, dictum luctus nisl. Quisque lacinia aliquam mauris, quis accumsan quam pulvinar vel. 
-                </p>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc congue posuere ex, sit amet fermentum enim fringilla et. Phasellus sollicitudin sem mi, eu fermentum odio vestibulum in. Maecenas rhoncus bibendum tellus id aliquam. Aliquam eget lorem ac arcu ullamcorper tempor in vel tortor. Pellentesque tempor arcu eget nulla mattis, vitae vehicula velit rhoncus. In eget ipsum mi. Nunc quis neque lectus. Pellentesque rhoncus, arcu non tempor semper, massa urna ultrices justo, sed vulputate nisi ex sed augue. Integer ac purus consectetur, porttitor nibh vel, venenatis felis. Praesent in lacinia est. Donec molestie tincidunt mattis. Vivamus non aliquam justo. Donec et magna pretium, condimentum nisi vel, commodo eros. Curabitur lectus lectus, scelerisque ut lacus quis, dictum luctus nisl. Quisque lacinia aliquam mauris, quis accumsan quam pulvinar vel. </p>
+                <p>
             </section>
         </main>
         <footer class="page-footer grid">
@@ -84,7 +82,18 @@
                 </div>
             </div>
             <div class=""></div>
-            {{env}}
+
         </footer>
     </div>
+
+            <!--Status.cafe-->
+        <script defer>
+        fetch("https://status.cafe/users/fri11s/status.json").then(t=>t.json()).then(t=>{if(!t.content.length){document.getElementById("statuscafe-content").innerHTML="No status yet.";return}document.getElementById("statuscafe-username").innerHTML='<a href="https://status.cafe/users/fri11s" target="_blank">Latest status</a> '+t.face+" "+t.timeAgo,document.getElementById("statuscafe-content").innerHTML=t.content});
+        </script>
+        <!--Last.fm-->
+        <script type="text/javascript">let user="ooohbrap",url="https://lastfm-last-played.biancarosa.com.br/"+user+"/latest-song",song=document.querySelector("#lfmSong"),lastplayed=document.querySelector("#lfmTime");fetch(url).then(function(e){return e.json()}).then(function(e){song.innerHTML=e.track.name+" - "+e.track.artist["#text"],lastplayedunix=parseInt(e.track.date.uts),lastplayed.innerHTML=timeSince(lastplayedunix)});var timeSince=function(e){"object"!=typeof e&&(e=new Date(e));var t,o=Math.floor(new Date().getTime()/1e3-e),r=Math.floor(o/31536e3);return r>=1?t="year":(r=Math.floor(o/2592e3))>=1?t="month":(r=Math.floor(o/86400))>=1?t="day":(r=Math.floor(o/3600))>=1?t="hour":(r=Math.floor(o/60))>=1?t="minute":(r=o,t="second"),(r>1||0===r)&&(t+="s"),r+" "+t+" ago"};</script>
+        <!--Current time-->
+        <script type="text/javascript">let time=document.querySelector("#localTime");const d=new Date().toLocaleTimeString("en-US",{timeZone:"Europe/London",hour:"2-digit",minute:"2-digit"});e=d.replace(/\s/g,""),time.innerHTML=e;</script>
+        {# <!--Carbon--> #}
+        {# <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script> #}
 </body>
